--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "googleapis": "^39.2.0",
+    "ini": "^2.0.0",
     "moment": "^2.24.0",
     "nodemon": "^2.0.0"
   },
