--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "googleapis": "^39.2.0",
     "ini": "^2.0.0",
     "moment": "^2.24.0",
+    "node-forge": "^0.10.0",
     "nodemon": "^2.0.0"
   },
   "devDependencies": {},
